save before trip

--- a/notebooks/28-07.ipynb
+++ b/notebooks/28-07.ipynb
@@ -737,8 +737,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a53d0acf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import pearsonr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "61bd6a75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4999999999999999, 0.6666666666666669)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pearsonr([5,7,3], [4,6,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d8805a",
    "metadata": {},
    "outputs": [],
    "source": []
