--- a/notebooks/MAB-manual-learn-user-type-deciles-corrected-no-rank-daily.ipynb
+++ b/notebooks/MAB-manual-learn-user-type-deciles-corrected-no-rank-daily.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0997b69c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys  \n",
-    "sys.path.insert(0, '/Users/caiorego/Desktop/BDS/RA/Seeding-Bandits/')\n",
-    "import numpy as np\n",
-    "path_dir = r\"/Users/../Volumes/Affiliations/\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "5e203d8d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "path_dir = r\"/Users/../Volumes/Affiliations/\"\n",
     "import sys  \n",
     "import pickle\n",
     "sys.path.insert(0, '/Users/caiorego/Desktop/BDS/RA/Seeding-Bandits/')\n",
@@ -649,6 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "mask = actions_sent_filtered_non_followers['fan_id'].isin(data.sender_id.unique())\n",
     "actions_sent_filtered_non_followers = actions_sent_filtered_non_followers.loc[mask]"
    ]
