commit before notebook it taken to maintenace

--- a/notebooks/Lab note #3 v0.0.ipynb
+++ b/notebooks/Lab note #3 v0.0.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "id": "03f61585",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f2/cgjzt69n5hlgmtsm36p1pztw0000gn/T/ipykernel_20919/3855957735.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/f2/cgjzt69n5hlgmtsm36p1pztw0000gn/T/ipykernel_38194/3855957735.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "id": "82504b60",
    "metadata": {},
    "outputs": [
@@ -1041,13 +1041,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f2/cgjzt69n5hlgmtsm36p1pztw0000gn/T/ipykernel_20919/2520098529.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/f2/cgjzt69n5hlgmtsm36p1pztw0000gn/T/ipykernel_38194/2520098529.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  actions_sent_non_fans['user_type'] = actions_sent_non_fans.fan_id.apply(lambda x: 'Maven' if x in maven_ids else\n",
-      "/var/folders/f2/cgjzt69n5hlgmtsm36p1pztw0000gn/T/ipykernel_20919/2520098529.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/f2/cgjzt69n5hlgmtsm36p1pztw0000gn/T/ipykernel_38194/2520098529.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3080,8 +3080,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "2f4adcd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fan_id</th>\n",
+       "      <th>followers</th>\n",
+       "      <th>outdegree_level</th>\n",
+       "      <th>activities_performed</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>706</td>\n",
+       "      <td>549.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>Star</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>845</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1255</td>\n",
+       "      <td>429.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>541.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>Star</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1506</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>859.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>Star</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2667</td>\n",
+       "      <td>408.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>high</td>\n",
+       "      <td>Star</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670741</th>\n",
+       "      <td>160366917</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>low</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670742</th>\n",
+       "      <td>160556475</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>low</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670743</th>\n",
+       "      <td>160592014</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>low</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670744</th>\n",
+       "      <td>160615335</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>low</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670745</th>\n",
+       "      <td>160636803</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>low</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>670746 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           fan_id  followers outdegree_level  activities_performed  \\\n",
+       "0             706      549.0            high                 185.0   \n",
+       "1             845       43.0            None                  51.0   \n",
+       "2            1255      429.0            high                 541.0   \n",
+       "3            1506      455.0            high                 859.0   \n",
+       "4            2667      408.0            high                 251.0   \n",
+       "...           ...        ...             ...                   ...   \n",
+       "670741  160366917       62.0            None                   0.0   \n",
+       "670742  160556475       50.0            None                   0.0   \n",
+       "670743  160592014       50.0            None                   0.0   \n",
+       "670744  160615335       50.0            None                   0.0   \n",
+       "670745  160636803       18.0            None                   0.0   \n",
+       "\n",
+       "       activity_level   Type  \n",
+       "0                high   Star  \n",
+       "1                None  other  \n",
+       "2                high   Star  \n",
+       "3                high   Star  \n",
+       "4                high   Star  \n",
+       "...               ...    ...  \n",
+       "670741            low  other  \n",
+       "670742            low  other  \n",
+       "670743            low  other  \n",
+       "670744            low  other  \n",
+       "670745            low  other  \n",
+       "\n",
+       "[670746 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "765ef392",
    "metadata": {},
    "outputs": [],
    "source": []
